# TitanCompress

./: README.md  accuracy_test.js  bitstream.js  coordinate_model.js  engine.js  fse_core.js  package-lock.json  package.json  sota_design.js  test.js  test_random_access.js  titan.pfx  vite.config.js
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
ui/: index.html  main.js  style.css
ui/engines/: lz_ultra.js  titan_gec.js  titan_glass.js  titan_ultra.js  ultra_engine.js
