[package]
name = "titan-compress"
version = "0.1.0"
description = "Titan Compressor Engine"
authors = ["Titan Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "titan_compress_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
